--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "https://seiichiyonezawa.com/"
+languageCode = "ja"
+title = "Seiichi Yonezawa"
 theme = "ananke"
