Add social links

--- a/config.yaml
+++ b/config.yaml
@@ -2,3 +2,7 @@ baseURL: https://seiichiyonezawa.com/
 languageCode: ja
 title: Seiichi Yonezawa
 theme: ananke
+
+params:
+  github: https://github.com/nzwsch
+  twitter: https://twitter.com/nzwsch
