--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
 publish = "_site"
-# Allows overriding metadata.json via env var
-command = "[ \"$METADATA_JSON\" ] && echo $METADATA_JSON > _data/metadata.json; npm run build"
+command = npm run build"
 
 [[headers]]
 for = "*.avif"
